[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_all"
harness = false

[dependencies]
day01a = { path = "../day01a" }
day01b = { path = "../day01b" }
